force-app/main/default/objects/RejetExterne__c/RejetExterne__c.object-meta.xml
<CustomObject>
    <description>Pour stocker les rejets BRED</description>
    <label>Rejet externe</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rejets externes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>