force-app/main/default/objects/RejetExterne__c/fields/Ccy__c.field-meta.xml
<CustomField>
    <fullName>Ccy__c</fullName>
    <label>Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>