force-app/main/default/objects/RejetExterne__c/fields/FCT_CreDtTm__c.field-meta.xml
<CustomField>
    <fullName>FCT_CreDtTm__c</fullName>
    <label>FCT_CreationDateTime</label>
    <type>DateTime</type>
</CustomField>