force-app/main/default/objects/RejetExterne__c/fields/FCT_ID__c.field-meta.xml
<CustomField>
    <fullName>FCT_ID__c</fullName>
    <label>FCT_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>