force-app/main/default/objects/RejetExterne__c/fields/HDR_CreDtTm__c.field-meta.xml
<CustomField>
    <fullName>HDR_CreDtTm__c</fullName>
    <label>HDR_CreationDateTime</label>
    <type>DateTime</type>
</CustomField>