force-app/main/default/objects/RejetExterne__c/fields/HDR_MsgId__c.field-meta.xml
<CustomField>
    <fullName>HDR_MsgId__c</fullName>
    <label>HDR_MessageId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>