force-app/main/default/objects/RejetExterne__c/fields/NbOfNtries__c.field-meta.xml
<CustomField>
    <fullName>NbOfNtries__c</fullName>
    <label>Number of entries</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>