force-app/main/default/objects/RejetExterne__c/fields/Nm__c.field-meta.xml
<CustomField>
    <fullName>Nm__c</fullName>
    <label>Nom</label>
    <length>20</length>
    <type>Text</type>
</CustomField>