force-app/main/default/objects/RejetExterne__c/fields/Sum__c.field-meta.xml
<CustomField>
    <fullName>Sum__c</fullName>
    <label>Somme</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>